[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.2", features = ["csr", "nightly"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.leptos]
name = "leptos-tutorial"
bin-package = "server"
lib-package = "front"
file = "style/output.css"
tailwind-input-file = "style/tailwind.css"
# A https://browsersl.ist query
browserquery = "defaults"

# Path, relative to root, to generat rust code to
gen_file = "src/server/generated.rs"
# Path to the source index.html file
index_file = "index.html"
# [Optional] Files in the asset_dir will be copied to the target/site directory
assets_dir = "assets"
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
end2end_test_cmd = "npx playwright test"
# On which port to serve the client side rendered site (when using --csr option)
csr_port = 3000
reload_port = 3001
# The port to use for automatic reload monitoring
